Includes response output 'spo app' until 'spo eventreceiver'. Closes #3929

--- a/docs/docs/cmd/aad/m365group/m365group-add.mdx
+++ b/docs/docs/cmd/aad/m365group/m365group-add.mdx
@@ -31,7 +31,7 @@ m365 aad m365group add [options]
 : Comma-separated list of Microsoft 365 Group members
 
 `--visibility [visibility]`
-: Specifies the group join policy and group content visibility for groups. Possible values are: `Private`, `Public`, or `HiddenMembership`. Defaults to `Public`.
+: Specifies the group join policy and group content visibility for groups. Allowed values: `Private`, `Public`, or `HiddenMembership`. Defaults to `Public`.
 
 `--allowMembersToPost [allowMembersToPost]`
 : Set if only group members should be able to post conversations to the group
