--- a/docs/docs/cmd/aad/user/user-add.mdx
+++ b/docs/docs/cmd/aad/user/user-add.mdx
@@ -22,7 +22,7 @@ m365 aad user add [options]
 : The user principal name (someuser@contoso.com).
 
 `--accountEnabled [accountEnabled]`
-: Whether the account is enabled. Possible values: `true`, `false`. Default value is `true`.
+: Whether the account is enabled. Allowed values: `true`, `false`. Defaults to `true`.
 
 `--mailNickname [mailNickname]`
 : The mail alias for the user. By default this value will be extracted from `userName`.
