--- a/docs/docs/cmd/spo/app/app-deploy.mdx
+++ b/docs/docs/cmd/spo/app/app-deploy.mdx
@@ -14,19 +14,19 @@ m365 spo app deploy [options]
 
 ```md definition-list
 `-i, --id [id]`
-: ID of the app to deploy. Specify the `id` or the `name` but not both
+: ID of the app to deploy. Specify the `id` or the `name` but not both.
 
 `-n, --name [name]`
-: Name of the app to deploy. Specify the `id` or the `name` but not both
+: Name of the app to deploy. Specify the `id` or the `name` but not both.
 
 `-u, --appCatalogUrl [appCatalogUrl]`
-: URL of the tenant or site collection app catalog. It must be specified when the scope is `sitecollection`
+: URL of the tenant or site collection app catalog. It must be specified when the scope is `sitecollection`.
 
 `--skipFeatureDeployment`
-: If the app supports tenant-wide deployment, deploy it to the whole tenant
+: If the app supports tenant-wide deployment, deploy it to the whole tenant.
 
 `-s, --appCatalogScope [appCatalogScope]`
-: Scope of the app catalog: `tenant,sitecollection`. Default `tenant`
+: Scope of the app catalog. Allowed values: `tenant`, `sitecollection`. Defaults to `tenant`.
 ```
 
 <Global />
@@ -47,7 +47,7 @@ Deploy the specified app in the tenant app catalog. Try to resolve the URL of th
 m365 spo app deploy --id 058140e3-0e37-44fc-a1d3-79c487d371a3
 ```
 
-Deploy the specified app in the site collection app catalog of site _https://contoso.sharepoint.com/sites/site1_
+Deploy the specified app in the site collection app catalog of the specified site.
 
 ```sh
 m365 spo app deploy --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --appCatalogScope sitecollection --appCatalogUrl https://contoso.sharepoint.com/sites/site1
@@ -59,7 +59,7 @@ Deploy the app with the specified name in the tenant app catalog. Try to resolve
 m365 spo app deploy --name solution.sppkg
 ```
 
-Deploy the specified app in the tenant app catalog located at _https://contoso.sharepoint.com/sites/apps_
+Deploy the specified app in the tenant app catalog.
 
 ```sh
 m365 spo app deploy --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --appCatalogUrl https://contoso.sharepoint.com/sites/apps
@@ -70,6 +70,10 @@ Deploy the specified app to the whole tenant at once. Features included in the s
 ```sh
 m365 spo app deploy --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --skipFeatureDeployment
 ```
+
+## Response
+
+The command won't return a response on success.
 
 ## More information
 
