--- a/docs/docs/cmd/spo/cdn/cdn-get.mdx
+++ b/docs/docs/cmd/spo/cdn/cdn-get.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # spo cdn get
 
@@ -14,7 +16,7 @@ m365 spo cdn get [options]
 
 ```md definition-list
 `-t, --type [type]`
-: Type of CDN to manage. Allowed values `Public`, `Private`. Default `Public`.
+: Type of CDN to manage. Allowed values are: `Public`, `Private`. Default `Public`.
 ```
 
 <Global />
@@ -42,6 +44,39 @@ Show if the Private CDN is currently enabled or not.
 ```sh
 m365 spo cdn get --type Private
 ```
+
+## Response
+
+<Tabs>
+  <TabItem value="JSON">
+
+  ```json
+  true
+  ```
+
+  </TabItem>
+  <TabItem value="Text">
+
+  ```text
+  true
+  ```
+
+  </TabItem>
+  <TabItem value="CSV">
+
+  ```csv
+  true
+  ```
+
+  </TabItem>
+  <TabItem value="Markdown">
+
+  ```md
+  true
+  ```
+
+  </TabItem>
+</Tabs>
 
 ## More information
 
