--- a/docs/docs/cmd/spo/file/file-copy.mdx
+++ b/docs/docs/cmd/spo/file/file-copy.mdx
@@ -29,7 +29,7 @@ m365 spo file copy [options]
 : New name of the destination file.
 
 `--nameConflictBehavior [nameConflictBehavior]`
-: Behavior when a document with the same name is already present at the destination. Possible values: `fail`, `replace`, `rename`. Default is `fail`.
+: Behavior when a document with the same name is already present at the destination. Allowed values: `fail`, `replace`, `rename`. Defaults to `fail`.
 
 `--resetAuthorAndCreated`
 : Use this option to clear the author and created date. When not specified, the values from the source file are used.
