--- a/docs/docs/cmd/spo/folder/folder-copy.mdx
+++ b/docs/docs/cmd/spo/folder/folder-copy.mdx
@@ -29,7 +29,7 @@ m365 spo folder copy [options]
 : New name of the destination folder.
 
 `--nameConflictBehavior [nameConflictBehavior]`
-: Behavior when a file or folder with the same name is already present at the destination. Possible values: `fail`, `rename`. The default is `fail`.
+: Behavior when a file or folder with the same name is already present at the destination. Allowed values: `fail`, `rename`. Defaults to `fail`.
 
 `--resetAuthorAndCreated`
 : Use this option to clear the author and created date. When not specified, the values from the source folder are used.
