--- a/docs/docs/cmd/todo/task/task-set.mdx
+++ b/docs/docs/cmd/todo/task/task-set.mdx
@@ -34,10 +34,10 @@ m365 todo task set [options]
 : The body content of the task. In the UI this is called 'notes'.
 
 `--bodyContentType [bodyContentType]`
-: The type of the body content. Possible values are `text` and `html`. Default is `text`.
+: The type of the body content. Allowed values: `text` and `html`. Defaults to `text`.
 
 `--importance [importance]`
-: The importance of the task. Possible values are: `low`, `normal`, `high`.
+: The importance of the task. Allowed values: `low`, `normal`, `high`.
 
 `--dueDateTime [dueDateTime]`
 : The date and time when the task is due. This should be defined as a valid ISO 8601 string in the UTC time zone. Only date value is needed, time value is always ignored.
