--- a/docs/docs/cmd/spo/app/app-retract.mdx
+++ b/docs/docs/cmd/spo/app/app-retract.mdx
@@ -17,13 +17,13 @@ m365 spo app retract [options]
 : ID of the app to retract. Needs to be available in the app catalog.
 
 `-u, --appCatalogUrl [appCatalogUrl]`
-: URL of the tenant or site collection app catalog. It must be specified when the scope is `sitecollection`
+: URL of the tenant or site collection app catalog. It must be specified when the scope is `sitecollection`.
 
 `-s, --appCatalogScope [appCatalogScope]`
-: Scope of the app catalog: `tenant,sitecollection`. Default `tenant`
+: Scope of the app catalog. Allowed values: `tenant`, `sitecollection`. Defaults to `tenant`.
 
 `-f, --force`
-: Don't prompt for confirming retracting the app
+: Don't prompt for confirming retracting the app.
 ```
 
 <Global />
@@ -44,7 +44,7 @@ Retract the specified app from the tenant app catalog. Try to resolve the URL of
 m365 spo app retract --id 058140e3-0e37-44fc-a1d3-79c487d371a3
 ```
 
-Retract the specified app from the tenant app catalog located at _https://contoso.sharepoint.com/sites/apps_. Additionally, will prompt for confirmation before actually retracting the app.
+Retract the specified app from the tenant app catalog. Additionally, will prompt for confirmation before actually retracting the app.
 
 ```sh
 m365 spo app retract --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --appCatalogUrl https://contoso.sharepoint.com/sites/apps
@@ -56,11 +56,15 @@ Retract the specified app from the tenant app catalog. Try to resolve the URL of
 m365 spo app retract --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --force
 ```
 
-Retract the specified app from a site collection app catalog of site _https://contoso.sharepoint.com/sites/site1_.
+Retract the specified app from a site collection app catalog of the specified site.
 
 ```sh
 m365 spo app retract --id d95f8c94-67a1-4615-9af8-361ad33be93c --appCatalogScope sitecollection --appCatalogUrl https://contoso.sharepoint.com/sites/site1
 ```
+
+## Response
+
+The command won't return a response on success.
 
 ## More information
 
