--- a/docs/docs/cmd/spo/app/app-upgrade.mdx
+++ b/docs/docs/cmd/spo/app/app-upgrade.mdx
@@ -14,13 +14,13 @@ m365 spo app upgrade [options]
 
 ```md definition-list
 `-i, --id <id>`
-: ID of the app to upgrade
+: ID of the app to upgrade.
 
 `-s, --siteUrl <siteUrl>`
-: Absolute URL of the site to upgrade the app in
+: Absolute URL of the site to upgrade the app in.
 
 `--appCatalogScope [appCatalogScope]`
-: Scope of the app catalog: `tenant,sitecollection`. Default `tenant`
+: Scope of the app catalog. Allowed values: `tenant`, `sitecollection`. Defaults to `tenant`.
 ```
 
 <Global />
@@ -31,17 +31,21 @@ If the app with the specified ID doesn't exist in the app catalog, the command w
 
 ## Examples
 
-Upgrade the app with ID _b2307a39-e878-458b-bc90-03bc578531d6_ in the _https://contoso.sharepoint.com_ site.
+Upgrade the app with the specified ID in the specified site.
 
 ```sh
 m365 spo app upgrade --id b2307a39-e878-458b-bc90-03bc578531d6 --siteUrl https://contoso.sharepoint.com
 ```
 
-Upgrade the app with ID _b2307a39-e878-458b-bc90-03bc578531d6_ in the _https://contoso.sharepoint.com_ site from site collection app catalog.
+Upgrade the app with the specified ID in the specified site from site collection app catalog.
 
 ```sh
 m365 spo app upgrade --id b2307a39-e878-458b-bc90-03bc578531d6 --siteUrl https://contoso.sharepoint.com --appCatalogScope sitecollection
 ```
+
+## Response
+
+The command won't return a response on success.
 
 ## More information
 
