--- a/docs/docs/cmd/spo/customaction/customaction-add.mdx
+++ b/docs/docs/cmd/spo/customaction/customaction-add.mdx
@@ -90,53 +90,57 @@ When using the `--clientSideComponentProperties` option it's possible to enter a
 
 ## Examples
 
-Adds tenant-wide SharePoint Framework Application Customizer extension in site _https://contoso.sharepoint.com/sites/test_
+Adds a tenant-wide SharePoint Framework Application Customizer extension in the specified site.
 
 ```sh
 m365 spo customaction add --webUrl https://contoso.sharepoint.com/sites/test --title "YourAppCustomizer" --name "YourName" --location "ClientSideExtension.ApplicationCustomizer" --clientSideComponentId b41916e7-e69d-467f-b37f-ff8ecf8f99f2 --clientSideComponentProperties '{"testMessage":"Test message"}'
 ```
 
-Adds tenant-wide SharePoint Framework **modern List View** Command Set extension in site _https://contoso.sharepoint.com/sites/test_
+Adds a tenant-wide SharePoint Framework **modern List View** Command Set extension in the specified site.
 
 ```sh
 m365 spo customaction add --webUrl https://contoso.sharepoint.com/sites/test --title "YourCommandSet" --name "YourName" --location "ClientSideExtension.ListViewCommandSet" --clientSideComponentId db3e6e35-363c-42b9-a254-ca661e437848 --clientSideComponentProperties '{"sampleTextOne":"One item is selected in the list.", "sampleTextTwo":"This command is always visible."}' --registrationId 100 --registrationType List
 ```
 
-Creates url custom action in the SiteActions menu in site _https://contoso.sharepoint.com/sites/test_
+Creates a url custom action in the SiteActions menu in the specified site.
 
 ```sh
 m365 spo customaction add --webUrl https://contoso.sharepoint.com/sites/test --title "YourTitle" --name "YourName" --location "Microsoft.SharePoint.StandardMenu" --group "SiteActions" --actionUrl "~site/SitePages/Home.aspx" --sequence 100
 ```
 
-Creates custom action in **classic** Document Library edit context menu in site _https://contoso.sharepoint.com/sites/test_
+Creates a custom action in the **classic** Document Library edit context menu on the specified site.
 
 ```sh
 m365 spo customaction add --webUrl https://contoso.sharepoint.com/sites/test --title "YourTitle" --name "YourName" --location "EditControlBlock" --actionUrl "javascript:(function(){ return console.log('CLI for Microsoft 365 rocks!'); })();" --registrationId 101 --registrationType List
 ```
 
-Creates ScriptLink custom action with script source in **classic pages** in site collection _https://contoso.sharepoint.com/sites/test_
+Creates a ScriptLink custom action with script source in **classic pages** in the specified site collection.
 
 ```sh
 m365 spo customaction add --webUrl https://contoso.sharepoint.com/sites/test --title "YourTitle" --name "YourName" --location "ScriptLink" --scriptSrc "~sitecollection/SiteAssets/YourScript.js" --sequence 101 --scope Site
 ```
 
-Creates ScriptLink custom action with script block in **classic pages** in site _https://contoso.sharepoint.com/sites/test_
+Creates a ScriptLink custom action with script block in **classic pages** in the specified site.
 
 ```sh
 m365 spo customaction add --webUrl https://contoso.sharepoint.com/sites/test --title "YourTitle" --name "YourName" --location "ScriptLink" --scriptBlock "(function(){ return console.log('Hello CLI for Microsoft 365!'); })();" --sequence 102
 ```
 
-Creates **classic List View** custom action located in the Ribbon in site _https://contoso.sharepoint.com/sites/test_
+Creates a **classic List View** custom action located in the Ribbon in the specified site.
 
 ```sh
 m365 spo customaction add --webUrl https://contoso.sharepoint.com/sites/test --title "YourTitle" --name "YourName" --location "CommandUI.Ribbon" --commandUIExtension '<CommandUIExtension><CommandUIDefinitions><CommandUIDefinition Location="Ribbon.List.Share.Controls._children"><Button Id="Ribbon.List.Share.GetItemsCountButton" Alt="Get list items count" Sequence="11" Command="Invoke_GetItemsCountButtonRequest" LabelText="Get Items Count" TemplateAlias="o1" Image32by32="_layouts/15/images/placeholder32x32.png" Image16by16="_layouts/15/images/placeholder16x16.png" /></CommandUIDefinition></CommandUIDefinitions><CommandUIHandlers><CommandUIHandler Command="Invoke_GetItemsCountButtonRequest" CommandAction="javascript: alert(ctx.TotalListItems);" EnabledScript="javascript: function checkEnable() { return (true);} checkEnable();"/></CommandUIHandlers></CommandUIExtension>'
 ```
 
-Creates custom action with delegated rights in the SiteActions menu in site _https://contoso.sharepoint.com/sites/test_
+Creates a custom action with delegated rights in the SiteActions menu in the specified site.
 
 ```sh
 m365 spo customaction add --webUrl https://contoso.sharepoint.com/sites/test --title "YourTitle" --name "YourName" --location "Microsoft.SharePoint.StandardMenu" --group "SiteActions" --actionUrl "~site/SitePages/Home.aspx" --rights "AddListItems,DeleteListItems,ManageLists"
 ```
+
+## Response
+
+The command won't return a response on success.
 
 ## More information
 
