--- a/docs/docs/cmd/spo/eventreceiver/eventreceiver-list.mdx
+++ b/docs/docs/cmd/spo/eventreceiver/eventreceiver-list.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # spo eventreceiver list
 
@@ -33,32 +35,91 @@ m365 spo eventreceiver list [options]
 
 ## Examples
 
-Retrieves event receivers in web _<https://contoso.sharepoint.com/sites/contoso-sales>_.
+Retrieves event receivers in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales
 ```
 
-Retrieves event receivers in site _<https://contoso.sharepoint.com/sites/contoso-sales>_.
+Retrieves event receivers in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --scope site
 ```
 
-Retrieves event receivers for list with title _Events_ in web _<https://contoso.sharepoint.com/sites/contoso-sales>_.
+Retrieves event receivers for list with given title in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listTitle Events
 ```
 
-Retrieves event receivers for list with ID _202b8199-b9de-43fd-9737-7f213f51c991_ in web _<https://contoso.sharepoint.com/sites/contoso-sales>_.
+Retrieves event receivers for list with given ID in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listId '202b8199-b9de-43fd-9737-7f213f51c991'
 ```
 
-Retrieves event receivers for list with url _/sites/contoso-sales/lists/Events_ in web _<https://contoso.sharepoint.com/sites/contoso-sales>_.
+Retrieves event receivers for list with given url in the specified site.
 
 ```sh
 m365 spo eventreceiver list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --listUrl '/sites/contoso-sales/lists/Events'
 ```
+
+## Response
+
+<Tabs>
+  <TabItem value="JSON">
+
+  ```json
+  [
+    {
+    "ReceiverAssembly": "Microsoft.Office.Server.UserProfiles, Version=16.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c",
+    "ReceiverClass": "Microsoft.Office.Server.UserProfiles.ContentFollowingWebEventReceiver",
+    "ReceiverId": "c5a6444a-9c7f-4a0d-9e29-fc6fe30e34ec",
+    "ReceiverName": "PnP Test Receiver",
+    "SequenceNumber": 10000,
+    "Synchronization": 2,
+    "EventType": 10204,
+    "ReceiverUrl": "https://northeurope1-0.pushnp.svc.ms/notifications?token=b4c0def2-a5ea-490a-bb85-c2e423b1384b"
+    }
+  ]
+  ```
+
+  </TabItem>
+  <TabItem value="Text">
+
+  ```text
+  ReceiverId                            ReceiverName
+  ------------------------------------  -------------------------------------------------------------------------
+  c5a6444a-9c7f-4a0d-9e29-fc6fe30e34ec  PnP Test Receiver
+  ```
+
+  </TabItem>
+  <TabItem value="CSV">
+
+  ```csv
+  ReceiverAssembly,ReceiverClass,ReceiverId,ReceiverName,SequenceNumber,Synchronization,EventType
+  "Microsoft.Office.Server.UserProfiles, Version=16.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c",Microsoft.Office.Server.UserProfiles.ContentFollowingWebEventReceiver,c5a6444a-9c7f-4a0d-9e29-fc6fe30e34ec,PnP Test Receiver,10000,2,10204
+  ```
+
+  </TabItem>
+  <TabItem value="Markdown">
+
+  ```md
+  # spo eventreceiver list --webUrl "https://contoso.sharepoint.com/sites/contoso-sales"
+
+  Date: 10/2/2023
+
+  Property | Value
+  ---------|-------
+  ReceiverAssembly | Microsoft.Office.Server.UserProfiles, Version=16.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c
+  ReceiverClass | Microsoft.Office.Server.UserProfiles.ContentFollowingWebEventReceiver
+  ReceiverId | c5a6444a-9c7f-4a0d-9e29-fc6fe30e34ec
+  ReceiverName | PnP Test Receiver
+  SequenceNumber | 10000
+  Synchronization | 2
+  EventType | 10204
+  ```
+
+  </TabItem>
+</Tabs>
