--- a/docs/docs/cmd/spo/folder/folder-move.mdx
+++ b/docs/docs/cmd/spo/folder/folder-move.mdx
@@ -29,7 +29,7 @@ m365 spo folder move [options]
 : The new name of the destination folder.
 
 `--nameConflictBehavior [nameConflictBehavior]`
-: Behavior when a file or folder with the same name is already present at the destination. Possible values: `fail`, `rename`. The default is `fail`.
+: Behavior when a file or folder with the same name is already present at the destination. Allowed values: `fail`, `rename`. Defaults to `fail`.
 
 `--retainEditorAndModified`
 : Use this option to retain the editor and modified date. When not specified, these values are reset.
