--- a/docs/docs/cmd/tenant/security/security-alerts-list.mdx
+++ b/docs/docs/cmd/tenant/security/security-alerts-list.mdx
@@ -16,7 +16,7 @@ m365 tenant security alerts list [options]
 
 ```md definition-list
 `--vendor [vendor]`
-: The vendor to return alerts for. Possible values `Azure Advanced Threat Protection`, `Azure Security Center`, `Microsoft Cloud App Security`, `Azure Active Directory Identity Protection`, `Azure Sentinel`, `Microsoft Defender ATP`. If omitted, all alerts are returned
+: The vendor to return alerts for. Allowed values: `Azure Advanced Threat Protection`, `Azure Security Center`, `Microsoft Cloud App Security`, `Azure Active Directory Identity Protection`, `Azure Sentinel`, `Microsoft Defender ATP`. If omitted, all alerts are returned.
 ```
 
 <Global />
